Stick to jdk11 code.